--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
             <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
             <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
             <ul class="redes">
-                <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href=""> 
+                    <img src="assets/github.png" alt="Github"></a>
+                </li>
+                <li class="redes__img"><a href=""> 
+                    <img src="assets/linkedin.png" alt="Linkedin"></a>
+                </li>
             </ul>
         </div>
     </section>
