--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
         <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
         <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
-        <!-- Firma opcional -->
-        <img class="sobre-mi__firma" src="assets/signature.png" alt="Firma">
+
     </section>
 
     <!-- Sección de Habilidades -->
@@ -60,25 +59,14 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/html.png" alt="HTML">
+                <img class="habilidades__icono" src="assets/htlm.png" alt="HTML">
                 <p class="habilidades__nombre">HTML 5</p>
             </li>
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/js_icon.png" alt="JavaScript">
                 <p class="habilidades__nombre">JavaScript</p>
             </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/php_icon.png" alt="PHP">
-                <p class="habilidades__nombre">PHP</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/nodejs_icon.png" alt="Node.js">
-                <p class="habilidades__nombre">Node.js</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/react_icon.png" alt="React">
-                <p class="habilidades__nombre">React</p>
-            </li>
+
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/css_icon.png" alt="CSS">
                 <p class="habilidades__nombre">CSS</p>
@@ -91,28 +79,32 @@
         <h2 class="aficiones__titulo">Aficiones</h2>
         <ul class="aficiones__lista">
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/skate_icon.png" alt="Patinaje">
-                <p class="aficiones__nombre">Patinaje</p>
+                <img class="aficiones__icono" src="assets/icons8-ciclismo-30.png" alt="Ciclismo">
+                <p class="aficiones__nombre">Ciclismo</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/guitar_icon.png" alt="Tocar bajo">
-                <p class="aficiones__nombre">Tocar bajo</p>
+                <img class="aficiones__icono" src="assets/icons8-joystick-30.png" alt="VideoJuegos">
+                <p class="aficiones__nombre">VideoJuegos</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/headphones_icon.png" alt="Oír música">
+                <img class="aficiones__icono" src="assets/icons8-airpods-48.png" alt="Oír música">
                 <p class="aficiones__nombre">Oír música</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/tv_icon.png" alt="Ver series">
+                <img class="aficiones__icono" src="assets/icons8-tanjiro-kamado-48.png" alt="Ver series">
                 <p class="aficiones__nombre">Ver series</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/forkspoon_icon.png" alt="Cocinar">
+                <img class="aficiones__icono" src="assets/icons8-cocinar-50.png" alt="Cocinar">
                 <p class="aficiones__nombre">Cocinar</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/camera_icon.png" alt="Tomar fotos">
+                <img class="aficiones__icono" src="assets/icons8-cámara-50.png" alt="Tomar fotos">
                 <p class="aficiones__nombre">Tomar fotos</p>
+            </li>
+            <li class="aficiones__elemento">
+                <img class="aficiones__icono" src="assets/icons8-viajar-64.png" alt=" Viajar">
+                <p class="aficiones__nombre">Viajar</p>
             </li>
         </ul>
     </section>
