--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
-        <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
+        <center> <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil"> </center>
         <div class="presentacion__contenedor">
             <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
             <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
@@ -40,7 +40,7 @@
                     <img src="assets/arrow.png" alt="Github"></a>
                 </li>
                 <li class="redes__img"><a href=""> Linkedin
-                    <img src="assets/arrow.png" alt="Linkedin"></a>
+                    <img src="assets/icons8-linkedin-48.png" alt="Linkedin"></a>
                 </li>
             </ul>
         </div>
@@ -59,16 +59,16 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/htlm.png" alt="HTML">
+                <img class="habilidades__icono" src="assets/icons8-html-48.png" alt="HTML">
                 <p class="habilidades__nombre">HTML 5</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/js_icon.png" alt="JavaScript">
+                <img class="habilidades__icono" src="assets/icons8-javascript-48.png" alt="JavaScript">
                 <p class="habilidades__nombre">JavaScript</p>
             </li>
 
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/css_icon.png" alt="CSS">
+                <img class="habilidades__icono" src="assets/icons8-css3-48.png" alt="CSS">
                 <p class="habilidades__nombre">CSS</p>
             </li>
         </ul>
@@ -79,31 +79,31 @@
         <h2 class="aficiones__titulo">Aficiones</h2>
         <ul class="aficiones__lista">
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-ciclismo-30.png" alt="Ciclismo">
+                <img class="aficiones__icono" src="assets/icons8-bicicleta-48.png" alt="Ciclismo">
                 <p class="aficiones__nombre">Ciclismo</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-joystick-30.png" alt="VideoJuegos">
+                <img class="aficiones__icono" src="assets/icons8-super-mario-48.png" alt="VideoJuegos">
                 <p class="aficiones__nombre">VideoJuegos</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-airpods-48.png" alt="Oír música">
+                <img class="aficiones__icono" src="assets/icons8-aipods-pro-max-48.png" alt="Oír música">
                 <p class="aficiones__nombre">Oír música</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-tanjiro-kamado-48.png" alt="Ver series">
+                <img class="aficiones__icono" src="assets/icons8-crunchyroll-48.png" alt="Ver series">
                 <p class="aficiones__nombre">Ver series</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-cocinar-50.png" alt="Cocinar">
+                <img class="aficiones__icono" src="assets/icons8-libro-de-cocina-48.png" alt="Cocinar">
                 <p class="aficiones__nombre">Cocinar</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-cámara-50.png" alt="Tomar fotos">
+                <img class="aficiones__icono" src="assets/icons8-fotos-48.png" alt="Tomar fotos">
                 <p class="aficiones__nombre">Tomar fotos</p>
             </li>
             <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/icons8-viajar-64.png" alt=" Viajar">
+                <img class="aficiones__icono" src="assets/icons8-aeropuerto-48.png" alt=" Viajar">
                 <p class="aficiones__nombre">Viajar</p>
             </li>
         </ul>
