--- a/index.html
+++ b/index.html
@@ -114,24 +114,19 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
+                <img class="formacion__iconos" src="assets/alura_logo.png" alt="Alura">
                 <div>
-                    <h3 class="formacion__nombre">Análisis de datos</h3>
-                    <p class="formacion__detalle">2018 - UFPR</p>
-                </div>
-            </li>
-            <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
-                <div>
-                    <h3 class="formacion__nombre">Formación en UX Design</h3>
-                    <p class="formacion__detalle">2019 - Alura</p>
+                    <h2 class="Name">Alura</h2>
+                    <h3 class="formacion__nombre">Desarrollo Front-End</h3>
+                    <p class="formacion__detalles">2024 - Alura</p>
                 </div>
             </li>
             <li class="formacion__elemento">
                 <img class="formacion__icono" src="assets/ufrj_logo.png" alt="UFRJ">
                 <div>
-                    <h3 class="formacion__nombre">Posgrado en diseño</h3>
-                    <p class="formacion__detalle">En curso - UFRJ</p>
+                    <h2 class="Name">Instituto Profesional Inacap</h2>
+                    <h3 class="formacion__nombre">Construcción Civil</h3>
+                    <p class="formacion__detalle">2016 - 2020</p>
                 </div>
             </li>
         </ul>
