--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
 
     <!-- Sección de Proyectos -->
     <section class="proyectos" id="proyectos">
-        <h2 class="proyectos__titulo">Experiencia Profesional</h2>
+        <h2 class="proyectos__titulo">Proyectos</h2>
         <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <h3 class="proyectos__nombre">NUMERO SECRETO</h3>
+            <a href="https://ryanmorentz.github.io/Adivina-el-numero/"><img src="assets/forca_print.png" alt="Adivina-el-numero" class="Proyecto-alura"></a>
         </div>
         <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <h3 class="proyectos__nombre">ENCRIPTADOR</h3>
+            <a href="https://encriptacion-challenger-alura.vercel.app/"><img src="assets/secretcode_print.png" alt="Encriptador" class="Proyecto-alura"></a>
         </div>
     </section>
 
