--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Menú -->
     <header class="cabecera">
         <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecera__titulo">Alura Latam</h1>
+        <h1 class="cabecera__titulo">Brian Canales</h1>
         <nav class="navegacion">
             <ul class="navegacion__lista">
                 <li class="navegacion__elemento"><a href="#sobre-mi">Sobre mí</a></li>
@@ -24,23 +24,27 @@
                 <li class="navegacion__elemento"><a href="#aficiones">Aficiones</a></li>
                 <li class="navegacion__elemento"><a href="#formacion">Formación</a></li>
                 <li class="navegacion__elemento"><a href="#proyectos">Proyectos</a></li>
-                <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
+                <li class="navegacion__Contacto"><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
-        <center> <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil"> </center>
+        <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
         <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+            <h2 class="presentacion__titulo">¡Hola!, mi nombre es Brian Canales,</h2>
+            <p class="presentacion__subtitulo">y soy un desarrollador de Front-End en proceso</p>
             <ul class="redes">
-                <li class="redes__img"><a href=""> Github
-                    <img src="assets/arrow.png" alt="Github"></a>
+                <li class="redes__img">
+                    <a href="https://github.com/RyanMorentz">Github
+                        <img src="assets/arrow.png" alt="Github">
+                    </a>
                 </li>
-                <li class="redes__img"><a href=""> Linkedin
-                    <img src="assets/icons8-linkedin-48.png" alt="Linkedin"></a>
+                <li class="redes__img">
+                    <a href="https://www.linkedin.com/in/brian-canales-22801b314/">Linkedin
+                        <img src="assets/icons8-linkedin-48.png" alt="Linkedin">
+                    </a>
                 </li>
             </ul>
         </div>
@@ -76,7 +80,7 @@
 
     <!-- Sección de Aficiones -->
     <section class="aficiones" id="aficiones">
-        <h2 class="aficiones__titulo">Aficiones</h2>
+        <h2 class="aficiones__titulo">Hobby</h2>
         <ul class="aficiones__lista">
             <li class="aficiones__elemento">
                 <img class="aficiones__icono" src="assets/icons8-bicicleta-48.png" alt="Ciclismo">
@@ -114,7 +118,7 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
-                <img class="formacion__iconos" src="assets/alura_logo.png" alt="Alura">
+                <img class="formacion__iconos" src="assets/aluraoracle.png" alt="Alura">
                 <div>
                     <h2 class="Name">Alura</h2>
                     <h3 class="formacion__nombre">Desarrollo Front-End</h3>
@@ -133,17 +137,36 @@
     </section>
 
     <!-- Sección de Proyectos -->
-    <section class="proyectos" id="proyectos">
-        <h2 class="proyectos__titulo">Proyectos</h2>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">NUMERO SECRETO</h3>
-            <a href="https://ryanmorentz.github.io/Adivina-el-numero/"><img src="assets/forca_print.png" alt="Adivina-el-numero" class="Proyecto-alura"></a>
-        </div>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">ENCRIPTADOR</h3>
-            <a href="https://encriptacion-challenger-alura.vercel.app/"><img src="assets/secretcode_print.png" alt="Encriptador" class="Proyecto-alura"></a>
-        </div>
-    </section>
+    <main class="proyectos">
+        <h2>Proyectos</h2>
+
+        <section class="Proyecto">
+            <img src="assets/forca_print.png" alt="Adivina-el-numero" class="Proyecto-alura">
+            <div class="proyecto__detalles">
+                <h3>NUMERO SECRETO</h3>
+                <div class="proyecto__botones">
+                    <a href="https://github.com/RyanMorentz/Adivina-el-numero.git">
+                    <button id="btn-repositorio" class="btn-repositorio">Repositório</button></a>
+                    <a href="https://ryanmorentz.github.io/Adivina-el-numero/">
+                    <button id="btn-repositorio" class="btn-repositorio">Ver Demo</button></a>
+                </div>
+            </div>
+        </section>
+
+        <section class="Proyecto">
+            <img src="assets/secretcode_print.png" alt="Encriptador" class="Proyecto-alura">
+            <div class="proyecto__detalles">
+                <h3>ENCRIPTADOR DE TEXTO</h3>
+                <div class="proyecto__botones">  
+                <a href="https://encriptacion-challenger-alura.vercel.app/">
+                    <button id="btn-repositorio" class="btn-repositorio">Repositório</button>
+                </a>
+                <a href="https://github.com/RyanMorentz/Encriptado-Challenger.git">
+                    <button id="btn-repositorio" class="btn-repositorio">Ver Demo</button>
+                </div>
+            </div> 
+        </section>
+    </main>
 
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
