--- a/index.html
+++ b/index.html
@@ -158,11 +158,10 @@
             <div class="proyecto__detalles">
                 <h3>ENCRIPTADOR DE TEXTO</h3>
                 <div class="proyecto__botones">  
+                    <a href="https://github.com/RyanMorentz/Encriptado-Challenger.git">
+                    <button id="btn-repositorio" class="btn-repositorio">Repositório</button></a>
                 <a href="https://encriptacion-challenger-alura.vercel.app/">
-                    <button id="btn-repositorio" class="btn-repositorio">Repositório</button>
-                </a>
-                <a href="https://github.com/RyanMorentz/Encriptado-Challenger.git">
-                    <button id="btn-repositorio" class="btn-repositorio">Ver Demo</button>
+                    <button id="btn-repositorio" class="btn-repositorio">Ver Demo</button></a>
                 </div>
             </div> 
         </section>
