--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
         <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
-
     </section>
 
     <!-- Sección de Habilidades -->
@@ -138,7 +136,7 @@
 
     <!-- Sección de Proyectos -->
     <main class="proyectos">
-        <h2>Proyectos</h2>
+        <h2 class="titulo-proyecto">Proyectos</h2>
 
         <section class="Proyecto">
             <img src="assets/forca_print.png" alt="Adivina-el-numero" class="Proyecto-alura">
