--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
 
     <!-- Sección de Proyectos -->
-    <main class="proyectos">
+    <section class="proyectos" id="proyectos">
         <h2 class="titulo-proyecto">Proyectos</h2>
 
         <section class="Proyecto">
@@ -163,7 +163,7 @@
                 </div>
             </div> 
         </section>
-    </main>
+    </section>
 
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
