--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
+        <p class="sobre-mi__texto">Soy nuevo en el mundo del desarrollo y soy titulado en Construcción Civil, apasionado por la tecnología, el desarrollo y el entretenimiento. Actualmente, soy un estudiande de aluraoracle en Front-End. En mi tiempo libre, disfruto de actividades al aire libre como el Ciclismo, también me gusta cocinar, ver series y jugar videojuegos. Siempre busco maneras de mejorar tanto mis habilidades técnicas como mis habilidades blandas.
+          </p>
     </section>
 
     <!-- Sección de Habilidades -->
@@ -190,7 +191,7 @@
     </section>
     
     <section class="foot">
-        <h2>Desarrollo por Brian Canales 2024</h2> 
+        <h2>Desarrollo por Brian Canales © 2024</h2> 
 
     </section>
 </body>
