--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Me llama Brian, tengo 27 años, soy de chile y soy nuevo en el mundo del desarrollo y soy titulado en Construcción Civil, apasionado por la tecnología, el desarrollo y el entretenimiento. Actualmente, soy un estudiande de aluraoracle en Front-End. En mi tiempo libre, disfruto de actividades al aire libre como el Ciclismo, también me gusta cocinar, ver series y jugar videojuegos. Siempre busco maneras de mejorar tanto mis habilidades técnicas como mis habilidades blandas.</p>
+        <p class="sobre-mi__texto">Me llamo Brian, tengo 27 años, soy de chile y soy nuevo en el mundo del desarrollo y tengo titulo en Construcción Civil, apasionado por la tecnología, el desarrollo y el entretenimiento. Actualmente, soy un estudiande de aluraoracle en Front-End. En mi tiempo libre, disfruto de actividades al aire libre como el ciclismo, cocinar, ver series y jugar videojuegos. Siempre busco maneras de mejorar tanto mis habilidades técnicas como mis habilidades blandas.</p>
     </section>
 
     <!-- Sección de Habilidades -->
